# wip

./: .gitignore  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
tests/: conftest.py
