[project]
name = "wip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[all]>=0.123.8",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]
[tool.pytest.ini_options]

asyncio_mode = "auto"

pythonpath = ["."]